<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_people_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/people_list"/>

    <item
        android:id="@+id/add_person"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/add_person"/>

    <item
        android:id="@+id/remove_person"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_remove_24"
        android:title="@string/remove_person"/>

</menu>