...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="AddPersonFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_person_fragment_root">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTxtIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
